@@ -14,6 +14,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- Fixed PHP/Mapscript to support PHP 5.3 (#3065, #3066)
+
 - remove -O optimization flags to configure script if configured
   with --enable-debug
 
